# Menu-Workspace

./: CMakeLists.txt  metadata.json
contents/config/: config.qml  main.xml  main21.xml
contents/locale/ui/: ConfigBehavior.qml  ConfigGeneral.qml  Footer.qml  Head.qml  ItemGridDelegate.qml  ItemGridView.qml  ItemMultiGridView.qml  MenuRepresentation.qml  Search.qml  main.qml
contents/ui/: AppsGridView.qml  CompactRepresentation.qml  ConfigAppearance.qml  ConfigGeneral.qml  Head.qml  ItemGridDelegate.qml  ItemGridView.qml  ItemMultiGridView.qml  MenuRepresentation.qml  Search.qml  SearchResultsGrid.qml  main.qml
contents/ui/code/: Grids.qml  ItemGridView.qml
